--- a/src/pages/Projects/pl-website.css
+++ b/src/pages/Projects/pl-website.css
@@ -113,10 +113,11 @@
     justify-content: space-between;
 }
 .carousel-image {
-    width: 65%;
-    height: fit-content;
+    width: 55vw;
+    height: auto;
     object-fit: contain;
     transition: transform 0.5s ease-in-out;
+    border: 3px solid #334c34
 }
 .image-blurb{
     width: 30%;
